--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<style>
 			body{
-				background-image: url("mars.gif");
+			background-image: url("mars.gif");
     			background-position: center;
     			background-size: cover;
 			}
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-		<title>Moving Rover On</title>
+		<title>Moving Rover On Mars!</title>
 	</head>
 	<noscript>Please turn on JavaScript to run this application.</noscript>
 	<body onload="add();">
